ctowasm/test/samples/error/declarations/incomplete_struct_member.c
// Struct with incomplete type as member

struct A;
int main() {
  struct B {
    A a;
  };
}